commit translated contents

--- a/powerbi-docs/collaborate-share/TOC.yml
+++ b/powerbi-docs/collaborate-share/TOC.yml
@@ -10,7 +10,7 @@
     - name: Conceitos
       expanded: true
       items:
-        - name: Organizar seu trabalho
+        - name: Organizar o trabalho em workspaces
           href: ../service-new-workspaces.md
         - name: Monitorar o uso em workspaces clássicos
           href: ../service-usage-metrics.md
@@ -73,7 +73,7 @@
               href: ../service-analyze-in-excel.md
             - name: Análise de solução de problemas no Excel
               href: ../desktop-troubleshooting-analyze-in-excel.md
-            - name: 'Erro: não foi possível encontrar nenhum dado em sua pasta de trabalho do Excel'
+            - name: 'Erro: Não foi possível localizar nenhum dado na sua pasta de trabalho do Excel'
               href: ../service-admin-troubleshoot-excel-workbook-data.md
             - name: Power Automate e Power BI
               href: ../service-flow-integration.md
