--- a/powerbi-docs/admin/index.yml
+++ b/powerbi-docs/admin/index.yml
@@ -12,56 +12,56 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 03/17/2020
-  ms.openlocfilehash: 12bd1e2ac706925301ca139bd84cef249c71e18c
-  ms.sourcegitcommit: 7aa0136f93f88516f97ddd8031ccac5d07863b92
+  ms.openlocfilehash: d64c608be40aa156b3df23d5dd5ad01d50ab00dc
+  ms.sourcegitcommit: bfc2baf862aade6873501566f13c744efdd146f3
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 05/05/2020
-  ms.locfileid: "79488466"
+  ms.lasthandoff: 05/13/2020
+  ms.locfileid: "83130068"
 landingContent:
 - title: Power BI para administradores e empresas
   linkLists:
   - linkListType: overview
     links:
     - text: O que é administração do Power BI?
-      url: ../service-admin-administering-power-bi-in-your-organization.md
+      url: service-admin-administering-power-bi-in-your-organization.md
     - text: O que é o Power BI Premium?
-      url: ../service-premium-what-is.md
+      url: service-premium-what-is.md
   - linkListType: concept
     links:
     - text: Função de administração no Office 365
-      url: ../service-admin-role.md
+      url: service-admin-role.md
 - title: Introdução
   linkLists:
   - linkListType: concept
     links:
     - text: Licenciamento para sua organização
-      url: ../service-admin-licensing-organization.md
+      url: service-admin-licensing-organization.md
     - text: Usando o portal de administração
-      url: ../service-admin-portal.md
+      url: service-admin-portal.md
   - linkListType: how-to-guide
     links:
     - text: Comprar o Power BI Pro
-      url: ../service-admin-purchasing-power-bi-pro.md
+      url: service-admin-purchasing-power-bi-pro.md
     - text: Inscrever-se com uma Avaliação do Office 365
-      url: ../service-admin-signing-up-for-power-bi-with-a-new-office-365-trial.md
+      url: service-admin-signing-up-for-power-bi-with-a-new-office-365-trial.md
     - text: Adicionar o Power BI com um parceiro do Office 365
-      url: ../service-admin-syndication-partner.md
+      url: service-admin-syndication-partner.md
 - title: Gerenciar sua organização
   linkLists:
   - linkListType: concept
     links:
     - text: Cenários de capacidade Premium
-      url: ../service-premium-capacity-scenarios.md
+      url: service-premium-capacity-scenarios.md
   - linkListType: how-to-guide
     links:
     - text: Onde o meu locatário está localizado?
-      url: ../service-admin-where-is-my-tenant-located.md
+      url: service-admin-where-is-my-tenant-located.md
     - text: Encontrar usuários que entraram
-      url: ../service-admin-access-usage.md
+      url: service-admin-access-usage.md
     - text: Auditar o Power BI
-      url: ../service-admin-auditing.md
-    - text: Controlar a integridade do serviço
-      url: ../service-admin-health.md
+      url: service-admin-auditing.md
+    - text: Monitorar a integridade do serviço
+      url: service-admin-health.md
     - text: Fechamento da sua conta do Power BI
-      url: ../service-admin-closing-your-account.md
+      url: service-admin-closing-your-account.md
