--- a/powerbi-docs/collaborate-share/index.yml
+++ b/powerbi-docs/collaborate-share/index.yml
@@ -12,56 +12,56 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 03/03/2020
-  ms.openlocfilehash: d4099c6ad1a5ed6396d8c4a777e3a0aa13a6d570
-  ms.sourcegitcommit: 7aa0136f93f88516f97ddd8031ccac5d07863b92
+  ms.openlocfilehash: 9b2f5fd70ed00dccb122fb4195284a1f3e0f75c2
+  ms.sourcegitcommit: 0e9e211082eca7fd939803e0cd9c6b114af2f90a
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 05/05/2020
-  ms.locfileid: "79112778"
+  ms.lasthandoff: 05/13/2020
+  ms.locfileid: "83275169"
 landingContent:
 - title: Introdução à colaboração e ao compartilhamento
   linkLists:
   - linkListType: overview
     links:
     - text: Maneiras de compartilhar seu trabalho
-      url: ../service-how-to-collaborate-distribute-dashboards-reports.md
+      url: service-how-to-collaborate-distribute-dashboards-reports.md
 - title: Colaboração com colegas de trabalho
   linkLists:
   - linkListType: concept
     links:
     - text: Introdução a conjuntos de dados entre workspaces
-      url: ../service-datasets-across-workspaces.md
+      url: ../connect-data/service-datasets-across-workspaces.md
     - text: Permissões Criar para conjuntos de dados compartilhados
-      url: ../service-datasets-build-permissions.md
+      url: ../connect-data/service-datasets-build-permissions.md
   - linkListType: how-to-guide
     links:
     - text: Organizar o trabalho em novos workspaces
-      url: ../service-new-workspaces.md
+      url: service-new-workspaces.md
 - title: Compartilhar seu trabalho
   linkLists:
   - linkListType: concept
     links:
     - text: Publicar um aplicativo
-      url: ../service-create-distribute-apps.md
+      url: service-create-distribute-apps.md
     - text: Monitorar métricas de uso
-      url: ../service-modern-usage-metrics.md
+      url: service-modern-usage-metrics.md
   - linkListType: how-to-guide
     links:
     - text: Compartilhar relatórios e dashboards
-      url: ../service-share-dashboards.md
+      url: service-share-dashboards.md
     - text: Filtrar e compartilhar um relatório
-      url: ../service-share-reports.md
+      url: service-share-reports.md
     - text: Compartilhar um conjunto de dados
-      url: ../service-datasets-share.md
+      url: ../connect-data/service-datasets-share.md
 - title: Integrar com outros serviços
   linkLists:
   - linkListType: concept
     links:
     - text: Azure e Power BI
-      url: ../service-azure-and-power-bi.md
+      url: ../connect-data/service-azure-and-power-bi.md
     - text: Analisar no Excel
-      url: ../service-analyze-in-excel.md
+      url: service-analyze-in-excel.md
   - linkListType: how-to-guide
     links:
     - text: Inserir no SharePoint Online
-      url: ../service-embed-report-spo.md
+      url: service-embed-report-spo.md
