--- a/powerbi-docs/fundamentals/index.yml
+++ b/powerbi-docs/fundamentals/index.yml
@@ -12,33 +12,33 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 03/05/2020
-  ms.openlocfilehash: 04ce4ce2ec0038ff6e79a2e65de8279a3a73dcad
-  ms.sourcegitcommit: 7aa0136f93f88516f97ddd8031ccac5d07863b92
+  ms.openlocfilehash: cbe4b08f84dcd4246bceb83933366d1086d27bd0
+  ms.sourcegitcommit: bfc2baf862aade6873501566f13c744efdd146f3
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 05/05/2020
-  ms.locfileid: "81439585"
+  ms.lasthandoff: 05/13/2020
+  ms.locfileid: "83348771"
 landingContent:
 - title: O que é Power BI?
   linkLists:
   - linkListType: overview
     links:
     - text: O que é Power BI?
-      url: ../power-bi-overview.md
+      url: power-bi-overview.md
     - text: O que é o Power BI Desktop?
-      url: ../desktop-what-is-desktop.md
+      url: desktop-what-is-desktop.md
     - text: O que é o serviço do Power BI?
-      url: ../power-bi-service-overview.md
+      url: power-bi-service-overview.md
     - text: Comparando o Power BI Desktop e o serviço
-      url: ../service-service-vs-desktop.md
-- title: Novidades
+      url: service-service-vs-desktop.md
+- title: Novidades?
   linkLists:
   - linkListType: concept
     links:
     - text: O que há de novo no Power BI Desktop?
-      url: ../desktop-latest-update.md
+      url: desktop-latest-update.md
     - text: O que há de novo no serviço?
-      url: ../service-whats-new.md
+      url: service-whats-new.md
 - title: Introdução ao Microsoft Learn
   linkLists:
   - linkListType: learn
@@ -47,21 +47,21 @@ landingContent:
       url: https://docs.microsoft.com/learn/paths/create-use-analytics-reports-power-bi/
     - text: Obter dados com o Power BI Desktop
       url: https://docs.microsoft.com/learn/modules/get-data-power-bi/?tutorial-step=1
-- title: Licenciamento
+- title: Licenças
   linkLists:
   - linkListType: concept
     links:
     - text: Inscrever-se no Power BI
-      url: ../service-self-service-signup-for-power-bi.md
+      url: service-self-service-signup-for-power-bi.md
     - text: Recursos por tipo de licença
-      url: ../service-features-license-type.md
+      url: service-features-license-type.md
 - title: Recursos
   linkLists:
   - linkListType: reference
     links:
     - text: Vídeos do Power BI
-      url: ../videos.md
+      url: videos.md
     - text: Vídeos do Power BI Desktop
-      url: ../desktop-videos.md
+      url: desktop-videos.md
     - text: Webinars
-      url: ../webinars.md
+      url: webinars.md
