--- a/powerbi-docs/collaborate-share/TOC.yml
+++ b/powerbi-docs/collaborate-share/TOC.yml
@@ -6,88 +6,88 @@
       expanded: true
       items:
         - name: Maneiras de compartilhar seu trabalho
-          href: ../service-how-to-collaborate-distribute-dashboards-reports.md
+          href: service-how-to-collaborate-distribute-dashboards-reports.md
     - name: Conceitos
       expanded: true
       items:
         - name: Organizar o trabalho em workspaces
-          href: ../service-new-workspaces.md
+          href: service-new-workspaces.md
         - name: Monitorar o uso em workspaces clássicos
-          href: ../service-usage-metrics.md
+          href: service-usage-metrics.md
         - name: Monitorar o uso em novos workspaces
-          href: ../service-modern-usage-metrics.md
+          href: service-modern-usage-metrics.md
     - name: Guias de instruções
       expanded: true
       items:
         - name: Colaborar no Power BI
           items:
             - name: Criar os novos workspaces
-              href: ../service-create-the-new-workspaces.md
+              href: service-create-the-new-workspaces.md
             - name: Optar por usar a nova aparência para workspaces
               href: service-workspaces-new-look.md
             - name: Atualizar workspaces clássicos
-              href: ../designer/service-upgrade-workspaces.md
+              href: ../collaborate-share/service-upgrade-workspaces.md
             - name: Criar workspaces
-              href: ../service-create-workspaces.md
+              href: service-create-workspaces.md
             - name: Publicar aplicativos de workspaces
-              href: ../service-create-distribute-apps.md
+              href: service-create-distribute-apps.md
             - name: Gerenciar o armazenamento de dados em workspaces
-              href: ../service-admin-manage-your-data-storage-in-power-bi.md
+              href: ../admin/service-admin-manage-your-data-storage-in-power-bi.md
             - name: Linhagem de dados
               href: service-data-lineage.md
             - name: Análise do impacto do conjunto de dados
               href: service-dataset-impact-analysis.md
             - name: Aplicar rótulos de confidencialidade de dados
-              href: ../designer/service-security-apply-data-sensitivity-labels.md
+              href: ../collaborate-share/service-security-apply-data-sensitivity-labels.md
             - name: Conectar-se a arquivos no OneDrive do seu grupo
-              href: ../service-connect-to-files-in-app-workspace-onedrive-for-business.md
+              href: ../connect-data/service-connect-to-files-in-app-workspace-onedrive-for-business.md
             - name: Colaborar em um workspace clássico
-              href: ../service-collaborate-power-bi-workspace.md
+              href: service-collaborate-power-bi-workspace.md
             - name: Gerenciar seu grupo no Power BI e no Office 365
-              href: ../service-manage-app-workspace-in-power-bi-and-office-365.md
+              href: service-manage-app-workspace-in-power-bi-and-office-365.md
         - name: Publicar e compartilhar seu trabalho
           items:
             - name: Compartilhar dashboards e relatórios
-              href: ../service-share-dashboards.md
+              href: service-share-dashboards.md
             - name: Filtrar e compartilhar um relatório
-              href: ../service-share-reports.md
+              href: service-share-reports.md
             - name: Filtrar um relatório usando parâmetros na URL
-              href: ../service-url-filters.md
+              href: service-url-filters.md
             - name: Assine para você e para outras pessoas
-              href: ../service-report-subscribe.md
+              href: service-report-subscribe.md
             - name: Conteúdo do recurso na Página Inicial
               href: service-featured-content.md
             - name: Inserir o relatório no Microsoft Teams
-              href: ../service-embed-report-microsoft-teams.md
+              href: service-embed-report-microsoft-teams.md
             - name: Inserir o relatório no SharePoint Online
-              href: ../service-embed-report-spo.md
+              href: service-embed-report-spo.md
             - name: Inserir o relatório em um site ou portal seguro
-              href: ../service-embed-secure.md
+              href: service-embed-secure.md
             - name: Publicar na Web por meio do Power BI
-              href: ../service-publish-to-web.md
+              href: service-publish-to-web.md
             - name: Compartilhar um dashboard que é vinculado a uma pasta de trabalho do Excel no OneDrive
-              href: ../service-share-dashboard-that-links-to-excel-onedrive.md
+              href: service-share-dashboard-that-links-to-excel-onedrive.md
         - name: Estenda o Power BI
           items:
             - name: Analisar no Excel
-              href: ../service-analyze-in-excel.md
+              href: service-analyze-in-excel.md
             - name: Análise de solução de problemas no Excel
-              href: ../desktop-troubleshooting-analyze-in-excel.md
+              href: desktop-troubleshooting-analyze-in-excel.md
             - name: 'Erro: Não foi possível localizar nenhum dado na sua pasta de trabalho do Excel'
-              href: ../service-admin-troubleshoot-excel-workbook-data.md
+              href: ../connect-data/service-admin-troubleshoot-excel-workbook-data.md
             - name: Power Automate e Power BI
-              href: ../service-flow-integration.md
+              href: service-flow-integration.md
             - name: Usar aplicativos de terceiros
-              href: ../service-power-bi-get-started-third-party-apps.md
+              href: service-power-bi-get-started-third-party-apps.md
         - name: Pacotes de conteúdo organizacional
           items:
             - name: Introdução aos pacotes de conteúdo organizacional
-              href: ../service-organizational-content-pack-introduction.md
+              href: service-organizational-content-pack-introduction.md
             - name: Criar e publicar um pacote de conteúdo
-              href: ../service-organizational-content-pack-create-and-publish.md
+              href: service-organizational-content-pack-create-and-publish.md
             - name: 'Copiar, atualizar e obter acesso aos pacotes de conteúdo'
-              href: ../service-organizational-content-pack-copy-refresh-access.md
+              href: service-organizational-content-pack-copy-refresh-access.md
             - name: 'Gerenciar, atualizar e excluir pacotes de conteúdo'
-              href: ../service-organizational-content-pack-manage-update-delete.md
+              href: service-organizational-content-pack-manage-update-delete.md
             - name: Remover uma conexão com um pacote de conteúdo
-              href: ../service-organizational-content-pack-disconnect.md
+              href: service-organizational-content-pack-disconnect.md
